objects/Rate__c.object
<CustomObject>
    <description>Contains the rate information pertaining to BPA</description>
    <fields>
        <fullName>ADP_savings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>% of ADP savings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_ASTHMA_A__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg A - Asthma Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_ASTHMA_B__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg B - Asthma Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_DIABETES_A__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg A - Diabetes Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_DIABETES_B__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg B - Diabetes Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_DIABETES_C__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg C - Diabetes Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_HEART_A__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg A - Chronic Heart Disease Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_HEART_B__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg B - Chronic Heart Disease Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_HEART_C__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg C - Chronic Heart Disease Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_IMPACT_A__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg A - Impact Condition Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_PULMONARY_A__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg A - COPD Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS_FEE_PULMONARY_B__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pkg B - COPD Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMERICAN_HEALTHWAYS__c</fullName>
        <label>American Healthways</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package A</fullName>
                </value>
                <value>
                    <fullName>Package B</fullName>
                </value>
                <value>
                    <fullName>Package C</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASL_Coverage_Min_point_of_attachmen__c</fullName>
        <label>ASL Coverage, Min point of attachment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASL_Coverage_includes_RunOff_Paid_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Aggregate Stop Loss Coverage includes coverage of Run-Off Paid Claims</inlineHelpText>
        <label>Coverage includes RunOff Paid Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASL_Growth__c</fullName>
        <description>Percent growth in ASL premium</description>
        <label>ASL Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASO_Growth__c</fullName>
        <description>Percent increase in admin fee</description>
        <label>Aggregate ASO Fee % Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AWP_minus__c</fullName>
        <label>AWP minus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Add_l_Spend_Account_s_paired_w_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if more than one HCA product is offered to the group. This is what needs to trigger the inclusion of additional pages</description>
        <label>Add&apos;l Spend Account(s) paired w/ product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_Admin_Charge__c</fullName>
        <label>Additional Comments Admin Charge</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_Term_Charge__c</fullName>
        <label>Additional Comments Term Charge</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_for_Line_Item__c</fullName>
        <description>Other comments or clarifications relating to administrative line items for the plan that the BPA relates to</description>
        <label>Additional Comments for Line Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_for_Termination__c</fullName>
        <label>Additional Comments for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Funding_Contribution_Comments__c</fullName>
        <label>Additional Funding/Contribution Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Product_Priority_1__c</fullName>
        <description>Additional Product - Priority 1 related to the HCA BPA</description>
        <label>Additional Product - Priority 1</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Product_Priority_2__c</fullName>
        <description>Additional Product - Priority 2 related to the HCA BPA</description>
        <label>Additional Product - Priority 2</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Product_Priority_3__c</fullName>
        <description>Additional Product - Priority 3 related to the HCA BPA</description>
        <label>Additional Product - Priority 3</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_provisions_Administrative_Cha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are additional provisions (outlined at end of BPA) for the administrative charges section of this BPA</description>
        <label>Additional provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_provisions_Claim_Admin_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are additional provisions (outlined at end of BPA) for the claim admiin provider fees section of this BPA</description>
        <label>Additional provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_provisions_Other_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are additional provisions (outlined at end of BPA) for the Other Service and/or Program Fee(s) section of this BPA</description>
        <label>Additional provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Administration_Fee_PEPM__c</fullName>
        <label>Administration Fee PEPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_ASO_Fee__c</fullName>
        <description>Used to capture the aggregate PEPM ASO Fee</description>
        <inlineHelpText>Used to capture the aggregate PEPM ASO Fee</inlineHelpText>
        <label>Aggregate ASO Fee (excluding dental)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Attachment_Claim_Liability__c</fullName>
        <inlineHelpText>Enter Aggregate Attachment Claim Liability  for each coverage unit</inlineHelpText>
        <label>Aggregate Attachment Claim Liability $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Excess_Loss_Limit_Claim_Value__c</fullName>
        <label>Aggregate Excess Loss Limit Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Excess_Run_Off_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregate Excess Run - Off Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_Excess_Stop_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregate Excess  Loss Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_Specialty_AWP_minus__c</fullName>
        <label>Aggregate Specialty AWP minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aggregate_Specialty_Dispensing_Fee__c</fullName>
        <label>Aggregate Specialty Dispensing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregate Stop Loss Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Level__c</fullName>
        <description>ASL attachment point</description>
        <inlineHelpText>ASL attachment point</inlineHelpText>
        <label>Aggregate Stop Loss Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Premium__c</fullName>
        <description>ASL premium amount</description>
        <label>Aggregate Stop Loss Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Premium_Amount__c</fullName>
        <label>Annual Premium Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Group_Number_s__c</fullName>
        <label>Applicable Group Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applies_to_All_Coverages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative Fee Applies to All Coverages</description>
        <label>Applies to All Coverages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Factor__c</fullName>
        <label>Attachment Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_Attachment_point__c</fullName>
        <label>Average Claim Value (Attachment point) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Claim_Value_per_Employee_per_mon__c</fullName>
        <label>Average Claim Value (per employee/mon) $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCC_FEE_PER_EMPLOYEE_PER_MONTH__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Blue Care Connection Fee PEPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCC_FEE_TYPE__c</fullName>
        <label>Blue Care Connection Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Covered Employee Per Month</fullName>
                </value>
                <value>
                    <fullName>Included in Service Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_HD_FEE_PER_EMPLOYEE_PER_MONTH__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Health Dialog Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCC_HEALTH_DIALOG__c</fullName>
        <label>Blue Care Custom Health Dialog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Coach Line Inbound</fullName>
                    <label>Health Coach Line (Inbound)</label>
                </value>
                <value>
                    <fullName>Health Coach Line Inbound Outbound</fullName>
                    <label>Health Coach Line (Inbound &amp; Outbound)</label>
                </value>
                <value>
                    <fullName>Health Coach Line with Disease Management</fullName>
                    <label>Health Coach Line (with Disease Management)</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_PROGRAM__c</fullName>
        <label>Blue Care Connection Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Care Advisor</fullName>
                </value>
                <value>
                    <fullName>Refer to Additional Provisions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_Package_list__c</fullName>
        <description>Allows user to select their Blue Care Connection package.</description>
        <label>BCC Package (may select one)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                </value>
                <value>
                    <fullName>Selective In/Out</fullName>
                </value>
                <value>
                    <fullName>Unique Package Design</fullName>
                </value>
                <value>
                    <fullName>Stand-Alone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCC_Upgrade_Description_1__c</fullName>
        <description>Describes the first Blue Care Connection Package upgrade.</description>
        <label>BCC Upgrade Desc #1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCC_Upgrades_Description_2__c</fullName>
        <description>Describes the second Blue Care Connection Package upgrade.</description>
        <label>BCC Upgrade Desc #2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BPA_BlueEdge_HCA__c</fullName>
        <description>BlueEdge HCA Plans 500-503</description>
        <label>BlueEdge HCA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueEdge HCA PPO 500</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HCA PPO 501</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HCA PPO 502</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HCA PPO 503</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_BlueEdge_HSA__c</fullName>
        <description>BlueEdge HSA Plans 600-602 &amp; 100 604-606</description>
        <label>BlueEdge HSA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueEdge HSA 600</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HSA 601</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HSA 602</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HSA 100 604</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HSA 100 605</fullName>
                </value>
                <value>
                    <fullName>BlueEdge HSA 100 606</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_BlueNet_EPO__c</fullName>
        <description>BlueNet EPO Plans 900-935</description>
        <label>BlueNet EPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueNet EPO 900</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 901</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 902</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 903</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 904</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 905</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 906</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 907</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 908</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 909</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 910</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 911</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 912</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 913</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 914</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 915</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 920</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 921</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 922</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 923</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 924</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 925</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 926</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 927</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 928</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 929</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 930</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 931</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 932</fullName>
                </value>
                <value>
                    <fullName>BlueNet EPO 933</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_BlueNet_H_EPO__c</fullName>
        <description>BlueNet H EPO Plans 700-703</description>
        <label>BlueNet H EPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueNet H EPO 700</fullName>
                </value>
                <value>
                    <fullName>BlueNet H EPO 701</fullName>
                </value>
                <value>
                    <fullName>BlueNet H EPO 702</fullName>
                </value>
                <value>
                    <fullName>BlueNet H EPO 703</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_BluePPO_Evolution__c</fullName>
        <description>BluePPO Evolution Plans 400-406</description>
        <label>BluePPO Evolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BluePPO Evolution 400</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 401</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 402</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 403</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 404</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 405</fullName>
                </value>
                <value>
                    <fullName>BluePPO Evolution 406</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Blue_Directions_for_Large_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blue Directions for Large Business purchased</description>
        <label>Blue Directions for Large Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPA_Blue_PPO_Minimum_Value__c</fullName>
        <description>Blue PPO Minimum Value Plan 800</description>
        <label>Blue PPO Minimum Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue PPO Minimum Value 800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Blue_Preferred_EPO__c</fullName>
        <description>Blue Preferred EPO Plans 300-303</description>
        <label>Blue Preferred EPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Preferred EPO 300</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred EPO 301</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred EPO 302</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred EPO 303</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Blue_Preferred_Plus__c</fullName>
        <description>Blue Preferred Plus Plans 200-203</description>
        <label>Blue Preferred Plus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Preferred Plus 200</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred Plus 201</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred Plus 202</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred Plus 203</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Dental__c</fullName>
        <label>Dental</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freedom Dental Plan passive PPO</fullName>
                    <label>Freedom Dental Plan (passive PPO)</label>
                </value>
                <value>
                    <fullName>Choice Dental Plan active PPO</fullName>
                    <label>Choice Dental Plan (active PPO)</label>
                </value>
                <value>
                    <fullName>Dental Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_HMO_Blue__c</fullName>
        <description>HMO Blue Plans 100-103</description>
        <label>HMO Blue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HMO Blue 100</fullName>
                </value>
                <value>
                    <fullName>HMO Blue 101</fullName>
                </value>
                <value>
                    <fullName>HMO Blue 102</fullName>
                </value>
                <value>
                    <fullName>HMO Blue 103</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Vision</fullName>
                </value>
                <value>
                    <fullName>Premier Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The form related to the Rate record. API name not changed to prevent component breaks</description>
        <label>Related Form ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Secure_Information__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASO - BPA - IL, ASO - BPA - MT, ASO - BPA - NM, ASO - BPA - OK, ASO - Renewal - IL, ASO - Renewal - MT, ASO - Renewal - NM, ASO - Renewal - OK, ASO - Renewal - TX, ASO - BPA - TX, HCA - BPA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Secure_Information__c</referenceTo>
        <relationshipLabel>Rates (BPA)</relationshipLabel>
        <relationshipName>Rates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Format_Explanation__c</fullName>
        <label>Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Format__c</fullName>
        <inlineHelpText>complete only if special billing requirements are needed</inlineHelpText>
        <label>Billing Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>Also Page Break</fullName>
                </value>
                <value>
                    <fullName>Categories</fullName>
                </value>
                <value>
                    <fullName>Multiple Billing Profiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlueCard_Program_Network_access_fees__c</fullName>
        <description>Network access fees to be paid to HCSC by the employer that this BPA relates to, for the plan that this BPA relates to</description>
        <label>BlueCard Program/Network access fees</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>The lesser of up to 10% of the discount or $2,000 per claim</fullName>
                </value>
                <value>
                    <fullName>Available on Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_AWP_minus__c</fullName>
        <label>Brand AWP minus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAP_Arrangement__c</fullName>
        <label>CAP Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPP_AMT_COVERAGE_1__c</fullName>
        <label>Diff % / Amount For Coverage #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_AMT_COVERAGE_2__c</fullName>
        <label>Diff % / Amount For Coverage #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_CLAIMS_PAYMENT_1__c</fullName>
        <label>Number of Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_CLAIMS_PAYMENT_2__c</fullName>
        <label>Number of Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_CLAIMS_PAYMENT_OTHER_1__c</fullName>
        <label>Other Explanation</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_CLAIMS_PAYMENT_OTHER_2__c</fullName>
        <label>Other Explanation</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Plus Program Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPP_NET_CLAIM_PERCENT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% of Net Claim Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPP_NET_CLAIM_PER_ENROLLEE__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>PEPM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPP_PERCENT_CLAIMS_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Diff % of Claims Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPP_PERCENT_CLAIMS_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Diff % of Claims Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPP_PERCENT_CLAIMS_BA_HMO__c</fullName>
        <label>% of Claims Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPP_PERCENT_CLAIMS_HMO__c</fullName>
        <label>% of Claims Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>